--- a/package.json
+++ b/package.json
@@ -2,18 +2,33 @@
     "name": "ws_task",
     "version": "1.0.0",
     "description": "Template for the WebSocket remote control task",
-    "main": "index.js",
-    "type": "module",
+    "main": "src/index.ts",
     "scripts": {
-        "start": "node ./index.js",
-        "start:dev": "nodemon ./index.js",
+        "start": "webpack --mode=production --node-env=production && node build/bundle.js",
+        "start:dev": "nodemon",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Andrei Auchynnikau",
     "keywords": [],
     "license": "ISC",
     "devDependencies": {
-        "nodemon": "^2.0.16"
+        "@types/node": "^18.11.18",
+        "@types/webpack": "^5.28.0",
+        "@types/ws": "^8.5.4",
+        "@typescript-eslint/eslint-plugin": "^5.48.0",
+        "@typescript-eslint/parser": "^5.48.0",
+        "clean-webpack-plugin": "^4.0.0",
+        "eslint": "^8.31.0",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "nodemon": "^2.0.16",
+        "ts-loader": "^9.4.2",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1",
+        "wepack-cli": "^0.0.1-security"
     },
     "dependencies": {
         "@nut-tree/nut-js": "^2.3.0",
