--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "lint:fix": "eslint . --fix",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "Andrei Auchynnikau",
+    "author": "Maks Rafalko",
     "keywords": [],
     "license": "ISC",
     "devDependencies": {
@@ -31,6 +31,7 @@
         "typescript": "^4.9.4",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1",
+        "webpack-node-externals": "^3.0.0",
         "wepack-cli": "^0.0.1-security"
     },
     "dependencies": {
